--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -162,7 +162,8 @@ body{
                 border-top: solid 1px #ebebeb; 
                 background-color: white;   
                 margin: 0px;
-                border: 15px
+                border: 0px;
+                padding: 0px
             }
 
                 /* Icono */
@@ -176,27 +177,29 @@ body{
                     background-color: #FFF;
                     border-radius: 50%;
                     position: absolute;
-                    right: 20px;
-                    top: -15px;
+                    right: 0px;
+                    top: -25px;
                     color: #39b54a;
                     transition: all 2s;
-                }
+                    }
 
                 /*Precio y descuento */
                 .precioDescuento{
                     display:flex;
                     align-items:center;
                     justify-content:space-between;
+                    padding: 0px;
+                    margin:0px
                 }
 
                     .precios{
-                        font-size: 18px;
+                        font-size: 14px;
                         margin: 0px;
                         width: 30%;
                     }
             
                     .descuentos{
-                        font-size: 16px;
+                        font-size: 12px;
                         margin: 8px;
                         color:#39b54a;
                         width: 70%;
@@ -384,6 +387,7 @@ body{
             width: 20%;    
         }
 
+        
         .descripciones{
             display: block;
         }
