--- a/views/home.html
+++ b/views/home.html
@@ -120,7 +120,7 @@
                                 <p class ="precios">$23.200</p>
                                 <p class ="descuentos">5% OFF</p>
                             </div>
-                            <h4 class="descripciones">SmartTv Samsung 43"</h4>
+                            <h4 class="descripciones">Smart Samsung 43"</h4>
                         </div>
                     </article>    
             
@@ -177,7 +177,7 @@
                                 <p class ="precios">$23.200</p>
                                 <p class ="descuentos">5% OFF</p>
                             </div>
-                            <h4 class="descripciones">SmartTv Samsung 43"</h4>
+                            <h4 class="descripciones">Smart Samsung 43"</h4>
                         </div>
                     </article>    
             
