--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -315,7 +315,8 @@ body{
         font-size: 2em;
         border-radius: 10px;
         background-color: white;
-        color: #1259c3
+        color: #1259c3;
+        margin-bottom: 10px;
     }
 
     .Copyrignt{
